# MeasuringObserver

./: README.md
MeasuringObserver/: CMakeLists.txt  ChannelList.qml  DialogChannelChange.qml  Main.qml  appcore.cpp  appcore.h  main.cpp
MeasuringObserverApp/: CMakeLists.txt  Gauge.qml  Main.qml  appcore.cpp  appcore.h  bledevice.cpp  bledevice.h  main.cpp
build-MeasuringObserver-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  appmeasuringobserver_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-MeasuringObserver-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-MeasuringObserver-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appMeasuringObserver.cmake  Qt6_QmlPlugins_Imports_appMeasuringObserver.rsp
build-MeasuringObserver-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-MeasuringObserver-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.rcc/: appMeasuringObserver_raw_qml_0.qrc  qmake_MeasuringObserver.qrc  qrc_appMeasuringObserver_raw_qml_0.cpp  qrc_qmake_MeasuringObserver.cpp
build-MeasuringObserver-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/MeasuringObserver/: appMeasuringObserver_qml_module_dir_map.qrc  qmldir
build-MeasuringObserver-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/appMeasuringObserver_autogen/: deps  moc_predefs.h
build-MeasuringObserverApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.recompact  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  appmeasuringobserverapp_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
build-MeasuringObserverApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-MeasuringObserverApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appMeasuringObserverApp.cmake  Qt6_QmlPlugins_Imports_appMeasuringObserverApp.rsp
build-MeasuringObserverApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-MeasuringObserverApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/.rcc/: appMeasuringObserverApp_raw_qml_0.qrc  qmake_MeasuringObserverApp.qrc  qrc_appMeasuringObserverApp_raw_qml_0.cpp  qrc_qmake_MeasuringObserverApp.cpp
build-MeasuringObserverApp-Desktop_Qt_6_5_1_MinGW_64_bit-Debug/MeasuringObserverApp/: Main.qml  appMeasuringObserverApp_qml_module_dir_map.qrc  qmldir
(+106 files in other folders)
